Sass structuring: Pt-II

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -18,7 +18,7 @@
 	--signature-heading-font: 'Source Sans Pro', sans-serif;
 
 	/* Default Spacings */
-	--signature-gutter: 3.125em;
+	--signature-gutter: 3rem;
 	--signature-gutter-full: var(--signature-gutter);
 	--signature-gutter-half: calc(var(--signature-gutter-full) / 2);
 	--signature-gutter-expand-factor: 1.6;
