--- a/src/sass/base/_index.scss
+++ b/src/sass/base/_index.scss
@@ -7,3 +7,7 @@
 @forward "base";
 @forward "containers";
 @forward "grid";
+@forward "utils";
+@forward "typography";
+@forward "colors";
+@forward "structure";
